# mobilefacenet_android

app/: CMakeLists.txt  build.gradle
app/src/main/cpp/: detect.h  face_jni.cpp  recognize.cpp  recognize.h
app/src/main/cpp/include/DetectAndRecognize/: recognize.h
app/src/main/cpp/src/: face_jni.cpp
app/src/main/cpp/src/DetectAndRecognize/: detect.cpp  recognize.cpp
app/src/main/java/com/emwit/core/: Face.java
app/src/main/java/com/example/l/mobilefacenet/: Face.java  MainActivity.java
gradle/wrapper/: gradle-wrapper.properties
openCVLibrary343/: build.gradle
